[feature/header] change page-width, size header, account field

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -343,6 +343,7 @@
       "password": "Password",
       "title": "Login",
       "sign_in": "Sign in",
+      "register": "Register",
       "submit": "Submit"
     },
     "order": {
