--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -36,7 +36,7 @@
       "previous": "Previous page"
     },
     "search": {
-      "search": "Search"
+      "search": "Search for products..."
     },
     "cart": {
       "view": "View my cart ({{ count }})",
